Fix overflow tag aside

--- a/css/style.css
+++ b/css/style.css
@@ -113,7 +113,7 @@ aside{
   color: rgba( 255 , 255, 255 , 0.5);
   display: flex;
   flex-direction: column;
-  overflow: auto;
+  overflow: hidden;
   z-index: 30;
 }
 
